--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="sik.kd-serang-upi.edu"
+				<a class="navbar-brand" href="http://sik.kd-serang.upi.edu/"
 					><img src="img/logo.jpg" alt="logo" style="width: 50px" /> SISTEM
 					INFORMASI KELAUTAN</a
 				>
