--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 					<iframe
 						width="560"
 						height="315"
-						src="https://www.youtube.com/embed/eGUEAvNpz48"
+						src="https://www.youtube.com/watch?v=uSpL9GR0QaI"
 						title="YouTube video player"
 						frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
