--- a/index.html
+++ b/index.html
@@ -202,16 +202,11 @@
 		<div class="container-fluid padding">
 			<div class="row padding">
 				<div class="col-lg-6">
-<!-- 					<iframe
-						width="560"
-						height="315"
-						src="https://www.youtube.com/watch?v=uSpL9GR0QaI"
-						title="YouTube video player"
-						frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen
-					></iframe> -->
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/uSpL9GR0QaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" 
+						src="https://www.youtube.com/embed/uSpL9GR0QaI" 
+						title="YouTube video player" frameborder="0"
+						allow="accelerometer; autoplay;
+						       clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<div class="col-lg-6">
 					<h2>Tentang Kami</h2>
