--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
              
 				<div  id="text-1" class="col-lg-6" style="background-color: white">
                     <div class="text-center" >
-					<h3>Kemahasiswaan</h3>
+					<h3>LATIHAN JAVASCRIPT</h3>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
 						excepturi quaerat! Corporis suscipit, ea facere minima eum fugiat
@@ -249,7 +249,7 @@
                 </div>
 				<div id="text-2" class="col-lg-6" style="background-color: grey;">
                 <div class="text-center">
-					<h3>Kemahasiswaan</h3>
+					<h3>LATIHAN JAVASCRIPT</h3>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
 						excepturi quaerat! Corporis suscipit, ea facere minima eum fugiat
